precision bug fix. start geoserver docs.